<resources>
    <string name="app_name">ASiDi</string>
    <string name="menu_1">Apa itu DM?</string>
    <string name="menu_2">Faktor Resiko</string>
    <string name="menu_3">Komplikasi</string>
    <string name="menu_4">Deteksi Dini</string>
    <string name="menu_5">Komposisi Makanan</string>
    <string name="menu_6">Aktifitas Fisik</string>
    <string name="menu_7">Bantuan</string>
    <string name="menu_9">Pengaduan</string>
    <string name="fr_1">Kegemukan</string>
    <string name="fr_2">Obesitas Sentral (lingkar perut diatas 80cm)</string>
    <string name="fr_3">Aktivitas Fisik Kurang</string>
    <string name="fr_4">Hipertensi</string>
    <string name="fr_5">Merokok</string>
    <string name="fr_6">Kadar Kolesterol</string>
    <string name="k_1">KEMATIAN</string>
    <string name="k_2">RESIKO PENYAKIT JANTUNG</string>
    <string name="k_3">GAGAL GINJAL</string>
    <string name="k_4">RESIKO STORE</string>
    <string name="k_5">RETINOPATI DIABETIKUS</string>
    <string name="km_1">Karbohidrat</string>
    <string name="km_2">Lemak</string>
    <string name="km_3">Protein</string>
    <string name="km_4">Natrium</string>
    <string name="km_5">Serat</string>
    <string name="af_1">Intensitas sedang (50-70% denyut nadi maksimal).</string>
    <string name="af_2">Aerobik 75 menit/minggu.</string>
    <string name="af_3">Aktivitas dibagi dalam tiga hari per minggu dan tidak ada dua hari berturut-turut tanpa aktivitas fisik.</string>
    <string name="ya">YA</string>
    <string name="tidak">TIDAK</string>
    <string name="q_1">Berapa lingkar perut anda?</string>
    <string name="q_2">Hitung Index Masa Tubuh (IMT) anda</string>
    <string name="q_3">Apakah anda sering merasa haus?</string>
    <string name="q_4">Apakah anda meminum air putih lebih dari 8 liter setiap harinya?</string>
    <string name="q_5">Apakah anda sering merasa lapar?</string>
    <string name="q_6">Apakah anda makan nasi lebih dari 2 kali per hari?</string>
    <string name="q_7">Apakah anda mengonsumsi makanan berserat seperti buah dan sayur kurang dari 2 kali per hari?</string>
    <string name="q_8">Apakah anda sering mengemil?</string>
    <string name="q_9">Apakah anda mengkonsumsi minuman libih dari 1 kali? (seperti teh/kopi)</string>
    <string name="q_10">Apakah anda sering buang air kecil di malam hari?</string>
    <string name="q_11">Apakah anda buang air kecil di malam hari lebih dari 3 kali?</string>
    <string name="q_12">Apakah anda rutin melakukan olahraga per minggu?</string>
    <string name="q_13">Apakah anda melakukan olahraga lebih dari 1 kali perminggu?</string>
    <string name="q_14">Apakah anda merokok?</string>
    <string name="q_15">Apakah anda sering pusing?</string>
    <string name="banner_ad_unit_id">ca-app-pub-2550623112476567/1938867826</string>
    <string name="int_ad_unit_id">ca-app-pub-2550623112476567/8991361336</string>
</resources>
