<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/a1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/menu_2"
                android:layout_toRightOf="@+id/menu_2"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:text="@string/fr_1"
                android:textColor="@color/color_notification_text"
                android:textSize="@dimen/common_text_size_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/a2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/menu_3"
                android:layout_toRightOf="@+id/menu_3"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:text="@string/fr_2"
                android:textColor="@color/color_notification_text"
                android:textSize="@dimen/common_text_size_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/a3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/menu_4"
                android:layout_toRightOf="@+id/menu_4"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:text="@string/fr_3"
                android:textColor="@color/color_notification_text"
                android:textSize="@dimen/common_text_size_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/a4" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/menu_5"
                android:layout_toRightOf="@+id/menu_5"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:text="@string/fr_4"
                android:textColor="@color/color_notification_text"
                android:textSize="@dimen/common_text_size_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/a5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/menu_6"
                android:layout_toRightOf="@+id/menu_6"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:text="@string/fr_5"
                android:textColor="@color/color_notification_text"
                android:textSize="@dimen/common_text_size_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/a6" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/menu_7"
                android:layout_toRightOf="@+id/menu_7"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:text="@string/fr_6"
                android:textColor="@color/color_notification_text"
                android:textSize="@dimen/common_text_size_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>

